<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.ispw</groupId>
	<artifactId>fixmycity</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<sonar.sources>src/main/java,src/main/resources,WebContent</sonar.sources>
		<sonar.exclusions>src/main/resources/com/ispw/fixmycity/logic/view/**/*,WebContent/lib/**/*</sonar.exclusions>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.jfoenix</groupId>
			<artifactId>jfoenix</artifactId>
			<version>9.0.9</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>13</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>13</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>5.4.0.Final</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>5.4.10.Final</version>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.19</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.sun.webkit/webview-deps -->
		<dependency>
			<groupId>com.sun.webkit</groupId>
			<artifactId>webview-deps</artifactId>
			<version>1.3.2</version>
			<type>pom</type>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-web -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>13.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.html</groupId>
			<artifactId>net.java.html.boot.fx</artifactId>
			<version>1.7</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>com.dukescript.api</groupId>
			<artifactId>leaflet4j</artifactId>
			<version>0.7.7</version>
		</dependency>
		<dependency>
			<groupId>fr.dudie</groupId>
			<artifactId>nominatim-api</artifactId>
			<version>3.4</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.0.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.14</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.11</version>
		</dependency>

		<!-- <dependency> <groupId>org.hibernate.javax.persistence</groupId> <artifactId>hibernate-jpa-2.1-api</artifactId> 
			<version>1.0.0.Final</version> </dependency> -->
	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.liquibase</groupId>
					<artifactId>liquibase-maven-plugin</artifactId>
					<version>3.8.5</version>
					<configuration>
						<changeLogFile>${basedir}/src/main/resources/db/changelog/progetto_ispw.changelog-master.xml</changeLogFile>
						<outputChangeLogFile>${basedir}/src/main/resources/db/changelog/progetto_ispw.changelog.xml</outputChangeLogFile>
						<driver>com.mysql.cj.jdbc.Driver</driver>
						<url>jdbc:mysql://localhost:3306/progetto_ispw?useSSL=false&amp;createDatabaseIfNotExist=true&amp;serverTimezone=Europe/Rome</url>
						<username>root</username>
						<password>root</password>
					</configuration>
					<executions>
						<execution>
							<phase>process-resources</phase>
							<goals>
								<goal>update</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>



			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.3</version>
				<configuration>
					<options>
						<option>--add-opens</option>
						<option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
						<option>--add-opens</option>
						<option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
						<option>--add-exports</option>
						<option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
						<option>--add-exports</option>
						<option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
						<option>--add-exports</option>
						<option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
						<option>--add-exports</option>
						<option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
					</options>
					<mainClass>com.ispw.fixmycity.logic.app.App</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>coverage</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.19.1</version>
						<configuration>
							<properties>
								<property>
									<name>listener</name>
									<value>org.sonar.java.jacoco.JUnitListener</value>
								</property>
							</properties>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>0.7.2.201409121644</version>
						<executions>
							<execution>
								<id>prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>org.codehaus.sonar-plugins.java</groupId>
					<artifactId>sonar-jacoco-listeners</artifactId>
					<version>2.4</version>
					<scope>test</scope>
				</dependency>
			</dependencies>
		</profile>
	</profiles>

</project>